// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component (complex) 1`] = `
.emotion-2 {
  display: inline-block;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
}

.emotion-3 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
}

.emotion-3:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-3:active {
  -webkit-transition: none;
  transition: none;
}

.emotion-3:active,
.emotion-3:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-3:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

<div
  class="Workbench"
  data-test-id="cf-ui-workbench"
>
  <header
    class="Workbench__header"
    data-test-id="cf-ui-workbench-header"
  >
    <div
      class="Workbench__header-icon"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
        ,
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <div
      class="Workbench__header-title"
      data-test-id="workbench-title"
    >
      <h1
        class="Workbench__header-title__heading emotion-1"
        data-test-id="cf-ui-heading"
      >
        Page title
      </h1>
    </div>
    <div
      class="Workbench__header-actions"
    >
      <button
        class="emotion-3"
        data-test-id="cf-ui-button"
        type="button"
      >
        <span
          class="emotion-2"
        >
          Click
        </span>
      </button>
    </div>
  </header>
  <div
    class="Workbench__content-wrapper"
  >
    <aside
      aria-label="Secondary sidebar"
      class="Workbench__sidebar Workbench__sidebar--left"
      data-test-id="cf-ui-workbench-sidebar-left"
    >
      Left sidebar
    </aside>
    <main
      aria-label="Main content"
      class="Workbench__content"
      data-test-id="cf-ui-workbench-content"
    >
      <div
        class="Workbench__content-inner Workbench__content-inner--default"
      >
        Workbench
      </div>
    </main>
    <aside
      aria-label="Primary sidebar"
      class="Workbench__sidebar Workbench__sidebar--right"
      data-test-id="cf-ui-workbench-sidebar-right"
    >
      Right sidebar
    </aside>
  </div>
</div>
`;

exports[`renders the component (simple) 1`] = `
.emotion-2 {
  display: inline-block;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
}

.emotion-3 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
}

.emotion-3:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-3:active {
  -webkit-transition: none;
  transition: none;
}

.emotion-3:active,
.emotion-3:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-3:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

<div
  class="Workbench"
  data-test-id="cf-ui-workbench"
>
  <header
    class="Workbench__header"
    data-test-id="cf-ui-workbench-header"
  >
    <div
      class="Workbench__header-icon"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
        ,
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <div
      class="Workbench__header-title"
      data-test-id="workbench-title"
    >
      <h1
        class="Workbench__header-title__heading emotion-1"
        data-test-id="cf-ui-heading"
      >
        Page title
      </h1>
    </div>
    <div
      class="Workbench__header-actions"
    >
      <button
        class="emotion-3"
        data-test-id="cf-ui-button"
        type="button"
      >
        <span
          class="emotion-2"
        >
          Click
        </span>
      </button>
    </div>
  </header>
  <div
    class="Workbench__content-wrapper"
  >
    <main
      aria-label="Main content"
      class="Workbench__content"
      data-test-id="cf-ui-workbench-content"
    >
      <div
        class="Workbench__content-inner Workbench__content-inner--default"
      >
        Workbench
      </div>
    </main>
  </div>
</div>
`;
